# openwhoop

./: .env.example  .gitignore  Cargo.toml  README.md
notebooks/: sleep-detection.ipynb
src/openwhoop/: Cargo.toml
src/openwhoop-algos/: Cargo.toml
src/openwhoop-algos/src/: activity.rs  exercise.rs  lib.rs  sleep.rs  sleep_consistency.rs  spo2.rs  strain.rs  stress.rs
src/openwhoop-algos/src/helpers/: time_math.rs
src/openwhoop-codec/src/: constants.rs  error.rs  packet.rs  packet_implementations.rs  whoop_data.rs
src/openwhoop-codec/src/whoop_data/: history.rs
src/openwhoop-db/src/: db.rs  lib.rs  sync.rs
src/openwhoop-db/src/algo_impl/: mod.rs  sleep.rs  spo2.rs  strain.rs  stress.rs  temperature.rs
src/openwhoop-db/src/type_impl/: activities.rs  history.rs
src/openwhoop-entities/src/: activities.rs  lib.rs  packets.rs  prelude.rs  strain.rs
src/openwhoop-migration/src/: lib.rs  m20250202_085524_activities.rs  m20260508_000000_strain.rs  m20260508_000001_activity_strain.rs  m20260514_000000_packets_generation.rs
src/openwhoop-types/: Cargo.toml
src/openwhoop-types/src/: activities.rs
src/openwhoop/src/: ble.rs  device.rs  lib.rs  main.rs  openwhoop.rs
src/openwhoop/src/sync/: gen5.rs
