[package]
name = "openwhoop"
version = "0.1.0"
edition = "2024"
default-run = "openwhoop"

[features]
default = []
tauri-blec = ["dep:tauri-plugin-blec"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
btleplug.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
ctrlc.workspace = true
dotenv.workspace = true
env_logger.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
openwhoop-algos.workspace = true
openwhoop-codec.workspace = true
openwhoop-db.workspace = true
openwhoop-entities.workspace = true
openwhoop-migration.workspace = true
openwhoop-types.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tauri-plugin-blec = { version = "0.8.1", optional = true }
tokio.workspace = true
uuid.workspace = true
zip.workspace = true
